# phantom-quant

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  index.md  pyproject.toml
.github/workflows/: ci.yml
docs/: FINAL_RELEASE_AUDIT.md  INDEX.md  OPEN_SOURCE_READINESS.md  PUBLIC_DEMO.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  REPRODUCIBILITY_CONTRACT.md  RISK_METRICS_CONTRACT.md  TW_SCENARIO_PROOF.md  phantom-quant.md  sample-report.md
docs/_archive/: INDEX.md  OSS-LANDSCAPE-AND-DIRECTION.md  ROADMAP.md  ROADMAP.zh-TW.md  TASK-risk-metrics.md  TASK-risk-metrics.z13.md
phantom_quant/: __init__.py  artifacts.py  bars.py  cli.py  costs.py  driver.py  limit_lock.py  paper.py  portfolio.py  registry.py  report.py  risk.py  slippage.py  strategy.py  tw_scenario.py  validation.py
phantom_quant/backtest/: engine.py  execution.py
phantom_quant/data/: __init__.py  provider.py  store.py
phantom_quant/strategies/: __init__.py  sma_cross.py
tests/: test_artifacts.py  test_bars.py  test_cache.py  test_cli.py  test_costs.py  test_driver.py  test_engine.py  test_engine_slippage.py  test_execution.py  test_limit_lock.py  test_open_source_contract.py  test_packaging.py  test_paper.py  test_paper_cli_e2e.py  test_portfolio.py  test_provider.py  test_registry.py  test_release_prep_contract.py  test_report.py  test_reproducibility_contract.py  test_risk_demo_contract.py  test_risk_exposure.py  test_slippage.py  test_sma_cross.py  test_store.py  test_strategy.py  test_tw_scenario_contract.py  test_validation.py
tests/fixtures/: bad_high_lt_low.csv  sample_2330_1d.csv
tests/golden/sample_2330_sma36/: equity.csv  run.json  trades.csv
