[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom-quant"
version = "0.1.0a0"
description = "台股 backtest → paper → live trading engine on phantom-mesh (P0: data + backtest)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = ["pandas>=2", "numpy>=1.26", "pyarrow>=15"]

[project.optional-dependencies]
broker = ["shioaji>=1"]
test = ["pytest>=7"]

[project.scripts]
phantom-quant = "phantom_quant.cli:main"

[tool.setuptools.packages.find]
include = ["phantom_quant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
