[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom-quant"
version = "0.1.0a0"
description = "台股 backtest → paper → live trading engine on phantom-mesh (P0: data + backtest)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Mark Lai" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["pandas>=2", "numpy>=1.26", "pyarrow>=15"]

[project.urls]
Homepage = "https://github.com/markl-a/phantom-quant"
Documentation = "https://github.com/markl-a/phantom-quant/tree/main/docs"
Issues = "https://github.com/markl-a/phantom-quant/issues"
Source = "https://github.com/markl-a/phantom-quant"

[project.optional-dependencies]
broker = ["shioaji>=1"]
test = ["pytest>=7"]
dev = ["pytest>=7", "ruff>=0.6"]

[project.scripts]
phantom-quant = "phantom_quant.cli:main"

[tool.setuptools.packages.find]
include = ["phantom_quant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "*.egg-info",
]
